# status-keycard-qt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
examples/: CMakeLists.txt  simple_usage.c  simple_usage.cpp  test_hardware.cpp
include/status-keycard-qt/: status_keycard.h
src/: c_api.cpp  signal_manager.cpp  signal_manager.h
src/flow/: flow_manager.cpp  flow_manager.h  flow_params.h  flow_signals.cpp  flow_signals.h  flow_state_machine.cpp  flow_state_machine.h  flow_types.h
src/flow/flows/: change_pairing_flow.cpp  change_pairing_flow.h  change_pin_flow.cpp  change_pin_flow.h  change_puk_flow.cpp  change_puk_flow.h  export_public_flow.cpp  export_public_flow.h  flow_base.cpp  flow_base.h  get_app_info_flow.cpp  get_app_info_flow.h  get_metadata_flow.cpp  get_metadata_flow.h  load_account_flow.cpp  load_account_flow.h  login_flow.cpp  login_flow.h  recover_account_flow.cpp  recover_account_flow.h  sign_flow.cpp  sign_flow.h  store_metadata_flow.cpp  store_metadata_flow.h
src/rpc/: rpc_service.cpp  rpc_service.h
src/session/: session_manager.cpp  session_manager.h  session_state.h
src/storage/: file_pairing_storage.cpp  file_pairing_storage.h
tests/: CMakeLists.txt  test_flow_logic_only.cpp  test_flow_signal_routing.cpp  test_flow_signals.cpp  test_flow_state_machine.cpp  test_flow_with_mock_backend.cpp  test_rpc_service.cpp  test_session_manager.cpp  test_sign_flow_tlv_parsing.cpp  test_signal_manager.cpp
tests/mocks/: i_communication_manager.h  mock_communication_manager.cpp  mock_communication_manager.h  mock_keycard_backend.cpp  mock_keycard_backend.h
